<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>dev.shed</groupId>
  <artifactId>shed</artifactId>
  <version>2.0.0</version>
  <name>shed</name>
  <properties>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.build.outputTimestamp>2026-07-30T00:00:00Z</project.build.outputTimestamp>
    <commonmark.version>0.28.0</commonmark.version>
    <jlatexmath.version>1.0.7</jlatexmath.version>
    <mermaid.java.version>0.2.0-beta.2</mermaid.java.version>
    <antlr.version>4.11.1</antlr.version>
    <owasp.html.sanitizer.version>20260313.1</owasp.html.sanitizer.version>
  </properties>
  <repositories>
    <repository>
      <id>central</id>
      <url>https://repo.maven.apache.org/maven2</url>
    </repository>
    <repository>
      <id>jetbrains-intellij-dependencies</id>
      <url>https://packages.jetbrains.team/maven/p/ij/intellij-dependencies</url>
    </repository>
  </repositories>
  <build>
    <resources>
      <resource>
        <directory>assets</directory>
        <targetPath>assets</targetPath>
        <includes>
          <include>logo/shed.png</include>
        </includes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.15.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>3.6.3</version>
        <executions>
          <execution>
            <id>enforce-java-21</id>
            <phase>validate</phase>
            <goals><goal>enforce</goal></goals>
            <configuration>
              <rules>
                <requireJavaVersion>
                  <version>[21,22)</version>
                  <message>Shed requires JDK 21. Run Maven with a JDK 21 runtime.</message>
                </requireJavaVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.4.2</version>
        <configuration>
          <archive>
            <manifest>
              <mainClass>shed.Texteditor</mainClass>
            </manifest>
            <manifestEntries>
              <Implementation-Title>Shed</Implementation-Title>
              <Implementation-Version>${project.version}</Implementation-Version>
              <Shed-Build-Java>${maven.compiler.release}</Shed-Build-Java>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.5.3</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals><goal>shade</goal></goals>
            <configuration>
              <createDependencyReducedPom>false</createDependencyReducedPom>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>shed.Texteditor</mainClass>
                  <manifestEntries>
                    <Implementation-Title>Shed</Implementation-Title>
                    <Implementation-Version>${project.version}</Implementation-Version>
                    <Shed-Build-Java>${maven.compiler.release}</Shed-Build-Java>
                  </manifestEntries>
                </transformer>
              </transformers>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <groupId>org.commonmark</groupId>
      <artifactId>commonmark</artifactId>
      <version>${commonmark.version}</version>
    </dependency>
    <dependency>
      <groupId>org.commonmark</groupId>
      <artifactId>commonmark-ext-autolink</artifactId>
      <version>${commonmark.version}</version>
    </dependency>
    <dependency>
      <groupId>org.commonmark</groupId>
      <artifactId>commonmark-ext-footnotes</artifactId>
      <version>${commonmark.version}</version>
    </dependency>
    <dependency>
      <groupId>org.commonmark</groupId>
      <artifactId>commonmark-ext-gfm-alerts</artifactId>
      <version>${commonmark.version}</version>
    </dependency>
    <dependency>
      <groupId>org.commonmark</groupId>
      <artifactId>commonmark-ext-gfm-strikethrough</artifactId>
      <version>${commonmark.version}</version>
    </dependency>
    <dependency>
      <groupId>org.commonmark</groupId>
      <artifactId>commonmark-ext-gfm-tables</artifactId>
      <version>${commonmark.version}</version>
    </dependency>
    <dependency>
      <groupId>org.commonmark</groupId>
      <artifactId>commonmark-ext-heading-anchor</artifactId>
      <version>${commonmark.version}</version>
    </dependency>
    <dependency>
      <groupId>org.commonmark</groupId>
      <artifactId>commonmark-ext-task-list-items</artifactId>
      <version>${commonmark.version}</version>
    </dependency>
    <dependency>
      <groupId>org.scilab.forge</groupId>
      <artifactId>jlatexmath</artifactId>
      <version>${jlatexmath.version}</version>
    </dependency>
    <dependency>
      <groupId>org.antlr</groupId>
      <artifactId>antlr4-runtime</artifactId>
      <version>${antlr.version}</version>
    </dependency>
    <dependency>
      <groupId>com.aresstack</groupId>
      <artifactId>mermaid-java</artifactId>
      <version>${mermaid.java.version}</version>
    </dependency>
    <dependency>
      <groupId>com.googlecode.owasp-java-html-sanitizer</groupId>
      <artifactId>owasp-java-html-sanitizer</artifactId>
      <version>${owasp.html.sanitizer.version}</version>
    </dependency>
    <dependency>
      <groupId>org.tomlj</groupId>
      <artifactId>tomlj</artifactId>
      <version>1.1.1</version>
    </dependency>
    <dependency>
      <groupId>org.luaj</groupId>
      <artifactId>luaj-jse</artifactId>
      <version>3.0.1</version>
    </dependency>
    <dependency>
      <groupId>org.jetbrains.jediterm</groupId>
      <artifactId>jediterm-core</artifactId>
      <version>3.72</version>
    </dependency>
    <dependency>
      <groupId>org.jetbrains.jediterm</groupId>
      <artifactId>jediterm-ui</artifactId>
      <version>3.72</version>
    </dependency>
    <dependency>
      <groupId>org.jetbrains.pty4j</groupId>
      <artifactId>pty4j</artifactId>
      <version>0.13.12</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-nop</artifactId>
      <version>2.0.13</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.10.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <profiles>
    <profile>
      <id>build-commit-metadata</id>
      <activation>
        <property>
          <name>shed.build.commit</name>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jar-plugin</artifactId>
            <configuration combine.self="override">
              <archive>
                <manifest>
                  <mainClass>shed.Texteditor</mainClass>
                </manifest>
                <manifestEntries>
                  <Implementation-Title>Shed</Implementation-Title>
                  <Implementation-Version>${project.version}</Implementation-Version>
                  <Shed-Build-Java>${maven.compiler.release}</Shed-Build-Java>
                  <Shed-Commit>${shed.build.commit}</Shed-Commit>
                </manifestEntries>
              </archive>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-shade-plugin</artifactId>
            <configuration combine.self="override">
              <createDependencyReducedPom>false</createDependencyReducedPom>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>shed.Texteditor</mainClass>
                  <manifestEntries>
                    <Implementation-Title>Shed</Implementation-Title>
                    <Implementation-Version>${project.version}</Implementation-Version>
                    <Shed-Build-Java>${maven.compiler.release}</Shed-Build-Java>
                    <Shed-Commit>${shed.build.commit}</Shed-Commit>
                  </manifestEntries>
                </transformer>
              </transformers>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
